# AirDefense25

./: .gitignore  README.md  requirements.txt  ros2_humble_install.sh  ros2_install.sh  ui_env_setup.sh
docs/: README.md
docs/guides/: git_workflow.md  index.md  ros2_workflow.md
docs/installation/: README.md  index.md  ros2.md  ui_enviroment.md
image processing/: Byte_Detector.py  Byte_tracker.py  Detector.py  OOP_Sort.py  Qrcode detector.py  color & size detection.py  detector.py  report_shape_detection.py  report_tracking.py  tracker.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/AirDefenseUITest/lib/AirDefenseUITest/: frame_publisher  frame_sub_test.py
install/AirDefenseUITest/share/AirDefenseUITest/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/AirDefenseUITest/share/AirDefenseUITest/cmake/: AirDefenseUITestConfig.cmake
install/cvpy/lib/cvpy/: image_publisher  image_subscriber
install/cvpy/share/cvpy/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/maininf/lib/maininf/: camera_node
install/maininf/share/maininf/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/maininf/share/maininf/cmake/: ament_cmake_export_dependencies-extras.cmake  maininfConfig.cmake
install/ui/lib/ui/: publisher  ui
install/ui/share/ui/: package.sh
log/: latest_build  latest_list
src/AirDefenseUITest/: CMakeLists.txt  package.xml
src/AirDefenseUITest/scripts/: frame_sub_test.py
src/AirDefenseUITest/src/: frame_publisher.cpp
src/air_defense_sim/: setup.py
src/air_defense_sim/air_defense_sim/: spawn_multiple_balloons.py
src/air_defense_sim/launch/: sim.launch.py
src/air_defense_sim/worlds/: air_defense_world.sdf
src/cvpy/: package.xml  setup.cfg  setup.py
src/cvpy/cvpy/: image_subscriber.py
src/main/: package.xml  setup.py
src/main/main/: camera.py
src/main/main/camera/: camera.py  camera_test.py
src/main/main/command_handler/: command_handler.py
src/main/main/detection/: detection.py  detections_overlay_test.py  yolo_detection.py
src/main/main/detection/msg/: BoundingBox.msg
src/main/main/serial/: serial.py  serial_test.py
src/main/main/serial/esp32_serial/: esp32_serial.ino
src/main/main/tracking/: Tracking.py  tracker.py  tracking.py  tracking_test.py
src/main/main/tracking/msg/: CentroidStatus.msg  CentroidStatusArray.msg  TrackedObject.msg  TrackedObjectArray.msg
src/maininf/: CMakeLists.txt  package.xml
src/maininf/src/: camera_node.cpp
src/simulation/: .gitignore  package.xml  readme.md  setup.cfg  setup.py
src/simulation/air_defense_sim/: camera_subscriber.py  spawn_multiple_balloons.py
src/simulation/launch/: sim.launch.py
src/simulation/models/balloon/: model.config  model.sdf
src/simulation/simulation/: balloon_mover.py  spawn_multiple_balloons.py
src/simulation/worlds/: air_defense_world.sdf
src/ui/: package.xml  setup.cfg  setup.py
src/ui/ui/: image_publisher.py
