<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maininf</name>
  <version>0.0.0</version>
  <description>ROS 2 package for publishing video frames from a file.</description>
  <maintainer email="abdurrahman@todo.todo">abdurrahman</maintainer>
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend> <!-- Optional, for advanced image handling -->

  <!-- OpenCV dependency -->
  <depend>opencv2</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>